; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/dpaa/extr_if_dtsec.c_dtsec_ifmedia_upd.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/dpaa/extr_if_dtsec.c_dtsec_ifmedia_upd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { %struct.dtsec_softc* }
%struct.dtsec_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ifnet*)* @dtsec_ifmedia_upd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dtsec_ifmedia_upd(%struct.ifnet* %0) #0 {
  %2 = alloca %struct.ifnet*, align 8
  %3 = alloca %struct.dtsec_softc*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %2, align 8
  %4 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %5 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %4, i32 0, i32 0
  %6 = load %struct.dtsec_softc*, %struct.dtsec_softc** %5, align 8
  store %struct.dtsec_softc* %6, %struct.dtsec_softc** %3, align 8
  %7 = load %struct.dtsec_softc*, %struct.dtsec_softc** %3, align 8
  %8 = call i32 @DTSEC_LOCK(%struct.dtsec_softc* %7)
  %9 = load %struct.dtsec_softc*, %struct.dtsec_softc** %3, align 8
  %10 = getelementptr inbounds %struct.dtsec_softc, %struct.dtsec_softc* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @mii_mediachg(i32 %11)
  %13 = load %struct.dtsec_softc*, %struct.dtsec_softc** %3, align 8
  %14 = call i32 @DTSEC_UNLOCK(%struct.dtsec_softc* %13)
  ret i32 0
}

declare dso_local i32 @DTSEC_LOCK(%struct.dtsec_softc*) #1

declare dso_local i32 @mii_mediachg(i32) #1

declare dso_local i32 @DTSEC_UNLOCK(%struct.dtsec_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
